test/types/range/strided/ambigAlignQueries.good
ambigAlignQueries.chpl:4: error: halt reached - Can't query the aligned bounds of an ambiguously aligned range
