test/types/range/strided/ambigAlignQueries.chpl
config const case = 1;

if case == 1 then
  writeln((..10 by 2).alignedHigh);
else
  writeln((1.. by -2).alignedLow);
